# ACMH_Kompute

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  colmap2mvsnet_acm.py  prepare_data.py
scripts/: pipeline.sh  visualize.sh
spv/: common.comp  propagation.comp
src/: ACMH.cpp  ACMH.hpp  cache.cpp  cache.hpp  helpers.cpp  helpers.hpp  kompute_test.cpp  main.cpp  main.hpp  sfm.cpp  sfm.hpp
src/shaders/: black_filter.comp  black_pixel_update.comp  checkerboard_filter.comp  common.comp  get_depth_normal.comp  noise2D.comp  propagation.comp  random_init.comp  red_filter.comp  red_pixel_update.comp  shader.comp
